Subtask1/ESIFTask2_1.sdk/.metadata/.plugins/org.eclipse.cdt.ui/global-build.log
22:11:01 **** Incremental Build of configuration Debug for project ESIF2_1_App ****
make pre-build main-build 
a9-linaro-pre-build-step
 
make: Nothing to be done for 'main-build'.
22:11:58 **** Auto Build of configuration Debug for project ESIF2_1_App ****
make pre-build main-build 
a9-linaro-pre-build-step
 
make: Nothing to be done for 'main-build'.
22:19:00 **** Incremental Build of configuration Debug for project ESIF2_1_App ****
make pre-build main-build 
a9-linaro-pre-build-step
 
make: Nothing to be done for 'main-build'.
22:19:44 **** Incremental Build of configuration Debug for project ESIF2_1_App ****
make pre-build main-build 
a9-linaro-pre-build-step
 
make: Nothing to be done for 'main-build'.
22:21:44 **** Incremental Build of configuration Debug for project ESIF2_1_App ****
make pre-build main-build 
a9-linaro-pre-build-step
 
make: Nothing to be done for 'main-build'.
22:43:42 **** Auto Build of configuration Debug for project ESIF2_1_App ****
make pre-build main-build 
a9-linaro-pre-build-step
 
Building file: ../src/main.cc
Invoking: ARM v7 g++ compiler
arm-none-eabi-g++ -Wall -O0 -g3 -c -fmessage-length=0 -MT"src/main.o" -mcpu=cortex-a9 -mfpu=vfpv3 -mfloat-abi=hard -I../../ESIF2_1_boardSupportPkg/ps7_cortexa9_0/include -MMD -MP -MF"src/main.d" -MT"src/main.o" -o "src/main.o" "../src/main.cc"
../src/main.cc: In function 'int main()':
../src/main.cc:84:4: error: 'uint2binary' was not declared in this scope
    uint2binary(currDIP, printStr, 3);
    ^~~~~~~~~~~
make: *** [src/subdir.mk:23: src/main.o] Error 1
22:43:57 **** Auto Build of configuration Debug for project ESIF2_1_App ****
make pre-build main-build 
a9-linaro-pre-build-step
 
Building file: ../src/main.cc
Invoking: ARM v7 g++ compiler
arm-none-eabi-g++ -Wall -O0 -g3 -c -fmessage-length=0 -MT"src/main.o" -mcpu=cortex-a9 -mfpu=vfpv3 -mfloat-abi=hard -I../../ESIF2_1_boardSupportPkg/ps7_cortexa9_0/include -MMD -MP -MF"src/main.d" -MT"src/main.o" -o "src/main.o" "../src/main.cc"
Finished building: ../src/main.cc
 
Building target: ESIF2_1_App.elf
Invoking: ARM v7 g++ linker
arm-none-eabi-g++ -mcpu=cortex-a9 -mfpu=vfpv3 -mfloat-abi=hard -Wl,-build-id=none -specs=Xilinx.spec -Wl,-T -Wl,../src/lscript.ld -L../../ESIF2_1_boardSupportPkg/ps7_cortexa9_0/lib -o "ESIF2_1_App.elf"  ./src/main.o   -Wl,--start-group,-lxil,-lgcc,-lc,-lstdc++,--end-group
Finished building target: ESIF2_1_App.elf
 
Invoking: ARM v7 Print Size
arm-none-eabi-size ESIF2_1_App.elf  |tee "ESIF2_1_App.elf.size"
   text	   data	    bss	    dec	    hex	filename
  35304	   2208	  22648	  60160	   eb00	ESIF2_1_App.elf
Finished building: ESIF2_1_App.elf.size
 
